{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 26,
  "lineage": "82ccd3c4-0f1f-7ed9-97eb-a14220e25f1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mpm-api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:595603857057:instance/i-03438a03fa336898b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mpm-ec2-basic-profile",
            "id": "i-03438a03fa336898b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "mpm-deployment-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebd51825fb28a9ce",
            "private_dns": "ip-172-31-19-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.16",
            "public_dns": "ec2-3-235-78-14.compute-1.amazonaws.com",
            "public_ip": "3.235.78.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 384,
                "kms_key_id": "arn:aws:kms:us-east-1:595603857057:key/e9b9bfbf-c679-482e-86a2-4d323c3eacc6",
                "throughput": 0,
                "volume_id": "vol-0b6e4e2fe619f58e7",
                "volume_size": 128,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-024c69292b93cde9d",
            "tags": {
              "Name": "mpm-mpm-api-server",
              "USGS": "server",
              "app_name": "mpm",
              "dns": "mpm-api.mpm_internal",
              "env_internal_domain": "mpm_internal",
              "inventory": "mpm-api"
            },
            "tags_all": {
              "Name": "mpm-mpm-api-server",
              "USGS": "server",
              "app_name": "mpm",
              "dns": "mpm-api.mpm_internal",
              "env_internal_domain": "mpm_internal",
              "inventory": "mpm-api"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "mpm-mpm-api-server-vol",
              "USGS": "volume",
              "cost_code": "USGS"
            },
            "vpc_security_group_ids": [
              "sg-0ca8162610cbef493"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_basic_profile",
            "aws_iam_role.ec2_basic_role",
            "aws_key_pair.public_key_pair",
            "aws_security_group.sg-ssh-only",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu-linux-2204-amd64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:internet-gateway/igw-03491c4298428c59f",
            "id": "igw-03491c4298428c59f",
            "owner_id": "595603857057",
            "tags": {
              "Name": "mpm-igw",
              "USGS": "igw",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-igw",
              "USGS": "igw",
              "cost_code": "USGS"
            },
            "vpc_id": "vpc-086cac835c5455ca5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:route-table/rtb-0c7466762ad1d5e78",
            "id": "rtb-0c7466762ad1d5e78",
            "owner_id": "595603857057",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03491c4298428c59f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mpm-rt",
              "USGS": "rt",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-rt",
              "USGS": "rt",
              "cost_code": "USGS"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cac835c5455ca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfbcce890855547a",
            "route_table_id": "rtb-0c7466762ad1d5e78",
            "subnet_id": "subnet-024c69292b93cde9d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet2",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04de4b16d83b7fe64",
            "route_table_id": "rtb-0c7466762ad1d5e78",
            "subnet_id": "subnet-034f3fe67811659fb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:security-group/sg-0d7ba6a38ce2e30d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7ba6a38ce2e30d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "mpm-internal-sg",
            "name_prefix": "",
            "owner_id": "595603857057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mpm-internal-sg",
              "USGS": "sg",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-internal-sg",
              "USGS": "sg",
              "cost_code": "USGS"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cac835c5455ca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:security-group/sg-0c187d1b781223948",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c187d1b781223948",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mpm-lb-sg",
            "name_prefix": "",
            "owner_id": "595603857057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mpm-lb-sg",
              "USGS": "sg",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-lb-sg",
              "USGS": "sg",
              "cost_code": "USGS"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cac835c5455ca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ssh-only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:security-group/sg-0ca8162610cbef493",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ca8162610cbef493",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mpm-ssh-only-sg",
            "name_prefix": "",
            "owner_id": "595603857057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mpm-ssh-only-sg",
              "USGS": "sg",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-ssh-only-sg",
              "USGS": "sg",
              "cost_code": "USGS"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cac835c5455ca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:subnet/subnet-024c69292b93cde9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024c69292b93cde9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595603857057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mpm-public-subnet",
              "USGS": "subnet",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-public-subnet",
              "USGS": "subnet",
              "cost_code": "USGS"
            },
            "vpc_id": "vpc-086cac835c5455ca5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:subnet/subnet-034f3fe67811659fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034f3fe67811659fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595603857057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mpm-public-subnet2",
              "USGS": "subnet",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-public-subnet2",
              "USGS": "subnet",
              "cost_code": "USGS"
            },
            "vpc_id": "vpc-086cac835c5455ca5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595603857057:vpc/vpc-086cac835c5455ca5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-059d657d6e6f085cc",
            "default_route_table_id": "rtb-0f8c00b229261b959",
            "default_security_group_id": "sg-0936396f9a62be09a",
            "dhcp_options_id": "dopt-8e0dace9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086cac835c5455ca5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8c00b229261b959",
            "owner_id": "595603857057",
            "tags": {
              "Name": "mpm-vpc",
              "USGS": "vpc",
              "cost_code": "USGS"
            },
            "tags_all": {
              "Name": "mpm-vpc",
              "USGS": "vpc",
              "cost_code": "USGS"
            }
          }
        }
      ]
    }
  ]
}